<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            android:layout_height="200dp">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/custom_tool_bar_home"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_gravity="bottom"
                app:title="Notes"
                app:layout_collapseMode="pin"
                app:layout_scrollFlags="scroll|exitUntilCollapsed|enterAlways"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="right"
                    android:layout_marginEnd="10dp"
                    tools:ignore="RtlHardcoded">

                    <ImageButton
                        android:id="@+id/select_all_btn"
                        android:background="@drawable/button_square"
                        android:src="@drawable/tick_new_app"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:contentDescription="@string/tickbtn" />
                    <ImageButton
                        android:id="@+id/search_btn"
                        android:layout_marginStart="5dp"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="@drawable/button_square"
                        android:src="@drawable/search_icon_2_0"
                        android:contentDescription="@string/searchbtn" />
                    <ImageButton
                        android:id="@+id/tripple_dot_sync_setting_dialog_opener"
                        android:layout_marginStart="5dp"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="@drawable/button_square"
                        android:src="@drawable/menu_3_dot"
                        android:contentDescription="@string/menubtn" />

                </LinearLayout>


            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>


    <TextView
        android:id="@+id/no_element_present"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/no_note_present"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="@+id/custom_tool_bar_home"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_of_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintTop_toBottomOf="@+id/custom_tool_bar_home"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_new_note_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_margin="25dp"

        android:contentDescription="@string/add_new_note"
        android:src="@drawable/ic_baseline_add_24"
        android:backgroundTint="#c8b6ff"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>